samples/_failures_safe/1761520386_c4857d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbbcc494.c: In function ‘main’:
./samples/SAFE/__tmp_dbbcc494.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("Dijkstra's algorithm:\n");
      |     ^~~~~~
